// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render without value 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  border: 1px solid var(--pbl-theme-colors-borders-main);
  border-radius: 8px;
  background-color: var(--pbl-theme-colors-common-white);
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  width: 300px;
}

.c3 {
  box-sizing: border-box;
  flex-grow: 1;
  border: 0;
  appearance: none;
  padding: 6px 8px;
  background-color: transparent;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  outline: none;
  padding-right: calc(8px * 2 + 8px);
  position: relative;
}

.c2 {
  position: relative;
  width: 100%;
  display: flex;
}

.c2 :after {
  content: '';
  background-image: url("data:image/svg+xml,%3Csvg width='8' height='6' viewBox='0 0 8 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4 6L0.535899 -6.52533e-07L7.4641 -4.68497e-08L4 6Z' fill='currentColor' /%3E%3C/svg%3E");
  width: 8px;
  height: 6px;
  position: absolute;
  right: 8px;
  top: 50%;
  transform: translateY(-50%);
}

<div>
  <div
    class="c0"
    css=","
  >
    <div
      class="c1"
      cssstyles=","
      data-testid="pbl-nativeSelect-wrapper"
      name="nativeSelect"
      variant="filled"
      width="300"
    >
      <div
        class="c2"
      >
        <select
          aria-invalid="false"
          class="c3"
          data-testid="pbl-nativeSelect"
          id="custom-id"
          variant="filled"
        >
          <option
            value=""
          >
            ---
          </option>
          <option
            value="some"
          >
            Some
          </option>
          <option
            value="otherValue"
          >
            Other
          </option>
        </select>
      </div>
    </div>
  </div>
</div>
`;

exports[`Show error when an error message is given 1`] = `
.c0 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-info-fontSize);
  line-height: var(--pbl-theme-typography-info-lineHeight);
  margin-bottom: var(--pbl-theme-typography-info-marginBottom);
  margin-top: 4px;
  color: var(--pbl-theme-colors-negative-main);
}

.c1 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  border: 1px solid var(--pbl-theme-colors-borders-main);
  border-radius: 8px;
  background-color: var(--pbl-theme-colors-common-white);
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  border-color: var(--pbl-theme-colors-negative-main);
  width: 300px;
}

.c1:focus {
  box-shadow: 0 0 0 3px var(--pbl-theme-colors-negative-lightest);
}

.c3 {
  box-sizing: border-box;
  flex-grow: 1;
  border: 0;
  appearance: none;
  padding: 6px 8px;
  background-color: transparent;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  outline: none;
  padding-right: calc(8px * 2 + 8px);
  position: relative;
}

.c2 {
  position: relative;
  width: 100%;
  display: flex;
}

.c2 :after {
  content: '';
  background-image: url("data:image/svg+xml,%3Csvg width='8' height='6' viewBox='0 0 8 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4 6L0.535899 -6.52533e-07L7.4641 -4.68497e-08L4 6Z' fill='currentColor' /%3E%3C/svg%3E");
  width: 8px;
  height: 6px;
  position: absolute;
  right: 8px;
  top: 50%;
  transform: translateY(-50%);
}

<div>
  <div
    class="c0"
    css=","
  >
    <div
      class="c1"
      cssstyles=","
      data-testid="pbl-nativeSelect-wrapper"
      error="[object Object]"
      name="nativeSelect"
      variant="filled"
      width="300"
    >
      <div
        class="c2"
      >
        <select
          aria-errormessage="custom-id-error"
          aria-invalid="true"
          class="c3"
          data-testid="pbl-nativeSelect"
          error="[object Object]"
          id="custom-id"
          variant="filled"
        >
          <option
            value=""
          >
            ---
          </option>
          <option
            value="some"
          >
            Some
          </option>
          <option
            value="otherValue"
          >
            Other
          </option>
        </select>
      </div>
    </div>
    <p
      aria-live="polite"
      class="c4"
      customstyles="[object Object]"
      data-testid="pbl-nativeSelect-infotext"
      id="custom-id-error"
      mt="2"
      textcolor="negative.main"
    >
      Something 
      <strong>
        terrible
      </strong>
       happened!
    </p>
  </div>
</div>
`;

exports[`Show infotext when available 1`] = `
.c0 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-info-fontSize);
  line-height: var(--pbl-theme-typography-info-lineHeight);
  margin-bottom: var(--pbl-theme-typography-info-marginBottom);
  margin-top: 4px;
  color: var(--pbl-theme-colors-text-info);
}

.c1 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  border: 1px solid var(--pbl-theme-colors-borders-main);
  border-radius: 8px;
  background-color: var(--pbl-theme-colors-common-white);
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  width: 300px;
}

.c3 {
  box-sizing: border-box;
  flex-grow: 1;
  border: 0;
  appearance: none;
  padding: 6px 8px;
  background-color: transparent;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  outline: none;
  padding-right: calc(8px * 2 + 8px);
  position: relative;
}

.c2 {
  position: relative;
  width: 100%;
  display: flex;
}

.c2 :after {
  content: '';
  background-image: url("data:image/svg+xml,%3Csvg width='8' height='6' viewBox='0 0 8 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4 6L0.535899 -6.52533e-07L7.4641 -4.68497e-08L4 6Z' fill='currentColor' /%3E%3C/svg%3E");
  width: 8px;
  height: 6px;
  position: absolute;
  right: 8px;
  top: 50%;
  transform: translateY(-50%);
}

<div>
  <div
    class="c0"
    css=","
  >
    <div
      class="c1"
      cssstyles=","
      data-testid="pbl-nativeSelect-wrapper"
      infotext="[object Object]"
      name="nativeSelect"
      variant="filled"
      width="300"
    >
      <div
        class="c2"
      >
        <select
          aria-describedby="custom-id-info"
          aria-invalid="false"
          class="c3"
          data-testid="pbl-nativeSelect"
          id="custom-id"
          infotext="[object Object]"
          variant="filled"
        >
          <option
            value=""
          >
            ---
          </option>
          <option
            value="some"
          >
            Some
          </option>
          <option
            value="otherValue"
          >
            Other
          </option>
        </select>
      </div>
    </div>
    <p
      aria-live="polite"
      class="c4"
      customstyles="[object Object]"
      data-testid="pbl-nativeSelect-infotext"
      id="custom-id-info"
      mt="2"
      textcolor="text.info"
    >
      Something that 
      <strong>
        helps
      </strong>
    </p>
  </div>
</div>
`;

exports[`Show label when available 1`] = `
.c0 {
  box-sizing: border-box;
}

.c1 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-paragraphBold-fontSize);
  line-height: var(--pbl-theme-typography-paragraphBold-lineHeight);
  font-weight: var(--pbl-theme-typography-paragraphBold-fontWeight);
  margin-bottom: var(--pbl-theme-typography-paragraphBold-marginBottom);
  margin-bottom: 6px;
}

.c2 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  border: 1px solid var(--pbl-theme-colors-borders-main);
  border-radius: 8px;
  background-color: var(--pbl-theme-colors-common-white);
  transition: border-color 0.3s,box-shadow 0.3s ease-in-out;
  width: 300px;
}

.c4 {
  box-sizing: border-box;
  flex-grow: 1;
  border: 0;
  appearance: none;
  padding: 6px 8px;
  background-color: transparent;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  outline: none;
  padding-right: calc(8px * 2 + 8px);
  position: relative;
}

.c3 {
  position: relative;
  width: 100%;
  display: flex;
}

.c3 :after {
  content: '';
  background-image: url("data:image/svg+xml,%3Csvg width='8' height='6' viewBox='0 0 8 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4 6L0.535899 -6.52533e-07L7.4641 -4.68497e-08L4 6Z' fill='currentColor' /%3E%3C/svg%3E");
  width: 8px;
  height: 6px;
  position: absolute;
  right: 8px;
  top: 50%;
  transform: translateY(-50%);
}

<div>
  <div
    class="c0"
    css=","
  >
    <label
      data-testid="pbl-nativeSelect-label"
      for="custom-id"
    >
      <p
        class="c1"
        customstyles="[object Object]"
        mb="3"
      >
        Your 
        <strong>
          name
        </strong>
      </p>
    </label>
    <div
      class="c2"
      cssstyles=","
      data-testid="pbl-nativeSelect-wrapper"
      name="nativeSelect"
      variant="filled"
      width="300"
    >
      <div
        class="c3"
      >
        <select
          aria-invalid="false"
          class="c4"
          data-testid="pbl-nativeSelect"
          id="custom-id"
          variant="filled"
        >
          <option
            value=""
          >
            ---
          </option>
          <option
            value="some"
          >
            Some
          </option>
          <option
            value="otherValue"
          >
            Other
          </option>
        </select>
      </div>
    </div>
  </div>
</div>
`;
